flapivor/tests/m3/hopix/typechecker/bad/25-invalid-function-call-11.hopix
def g : Int -> Int (x) = f(x)
and f : Int -> String (x) = g(x)